# dewarp

./: .editorconfig  .gitignore  LICENSE  README.md  dewarp.py  dewarp.spec  generate_icon.py  pyproject.toml  requirements.txt
lib/: __init__.py  corner_detector.py  image_canvas.py  scale_calibrator.py  unit_converter.py
test/: generate_test_image.py  test_corner_detection.py  test_image_metadata.json
tools/: generate_icon.py  generate_test_image.py
